--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "mongoose": "^5.12.9"
+    "method-override": "^3.0.0",
+    "mongoose": "^5.12.9",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
-    "dotenv": "^9.0.2",
-    "nodemon": "^2.0.7"
+    "dotenv": "^9.0.2"
   }
 }
